--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -135,14 +135,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "IYZqpvkjOyOW",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IYZqpvkjOyOW",
-        "outputId": "b0a5b702-85d8-48f8-8044-b23d48add5ea"
+        "outputId": "5790d47c-948b-4fb5-b063-e9b6dd77e796"
       },
       "outputs": [
         {
@@ -362,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "QaVvn_cR0SGU",
       "metadata": {
         "id": "QaVvn_cR0SGU"
@@ -372,19 +372,15 @@
         "def ZYX_to_Quaternion(th_z, th_y, th_x):\n",
         "  quaternion = np.zeros(4)\n",
         "  # Write your code here\n",
-        "  cz = np.cos(th_z/2.0)\n",
-        "  sz = np.sin(th_z/2.0)\n",
-        "  cy = np.cos(th_y/2.0)\n",
-        "  sy = np.sin(th_y/2.0)\n",
-        "  cx = np.cos(th_x/2.0)\n",
-        "  sx = np.sin(th_x/2.0)\n",
+        "  r = ZYX_to_SO3(th_z, th_y, th_x)\n",
+        "  omega, theta = SO3_to_so3(r)\n",
         "\n",
-        "  w = cz*cy*cx + sz*sy*sx\n",
-        "  x = cz*cy*sx - sz*sy*cx\n",
-        "  y = cz*sy*cx + sz*cy*sx\n",
-        "  z = sz*cy*cx - cz*sy*sx\n",
+        "  if theta == 0 or omega is None:\n",
+        "        return np.array([1.0, 0.0, 0.0, 0.0])\n",
         "\n",
-        "  quaternion = np.array([w, x, y, z])\n",
+        "  w = np.cos(theta/2.0)\n",
+        "  xyz = omega * np.sin(theta/2.0)\n",
+        "  quaternion = np.hstack([w, xyz])\n",
         "  # ---------------------------------------------\n",
         "  return quaternion\n",
         "\n",
@@ -404,14 +400,16 @@
         "    omega *= (1./np.sqrt(2*(1+r33)))\n",
         "  else: # Other normal cases\n",
         "    # write your code to compute so(3)\n",
-        "    ...\n",
+        "    theta = np.arccos((np.trace(R) - 1) / 2.0)\n",
+        "    skew = (R - R.T) / (2.0 * np.sin(theta))\n",
+        "    omega = vee(skew)\n",
         "    # ----------------------------------------\n",
         "  return omega, theta"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "DaxKy_O3_g-2",
       "metadata": {
         "id": "DaxKy_O3_g-2"
@@ -438,14 +436,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "F4uFUlWl_2xQ",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "F4uFUlWl_2xQ",
-        "outputId": "30de6522-2fc5-459a-d7b2-9793b0c532f6"
+        "outputId": "cd9c888a-2549-44a6-e47d-b7925270ab89"
       },
       "outputs": [
         {
@@ -482,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "HWse3zsszJMD",
       "metadata": {
         "id": "HWse3zsszJMD"
@@ -494,24 +492,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "0Q6yfu5lnYRX",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 823
+          "height": 807
         },
         "id": "0Q6yfu5lnYRX",
-        "outputId": "e2a8bb73-9ce4-47e3-ed40-30fe0c300c0a"
+        "outputId": "234d6593-886d-484f-9669-5ac7444d255a"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "p_a is [ 0.5475349   1.16159039 -0.03022092]\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -527,7 +518,8 @@
         "fig_q4 = plt.figure(figsize=(10,10))\n",
         "\n",
         "# Write your code: Compute the vector (p_a) rotated by R_4a\n",
-        "...\n",
+        "R_4a = ZYX_to_SO3(0.5, 0.3, -0.7)\n",
+        "p_a  = R_4a @ p\n",
         "# -------------------------------------------------\n",
         "\n",
         "ax_q4 = fig_q4.add_subplot(projection='3d')\n",
@@ -541,24 +533,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "M6hcxpvZvVVR",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 829
+          "height": 813
         },
         "id": "M6hcxpvZvVVR",
-        "outputId": "143faa4c-667d-45a3-f8e6-6a5167b89384"
+        "outputId": "86d2835e-c40a-46bf-821f-11fd631728eb"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "p_b is [1.0758895  0.37509602 0.59309759]\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -574,7 +559,8 @@
         "fig_q4b= plt.figure(figsize=(10,10))\n",
         "\n",
         "# Write your code: Compute the vector (p_b) rotated by R_4b\n",
-        "...\n",
+        "R_4b = ZYX_to_SO3(0.7, 0.1, np.pi/3)\n",
+        "p_b  = R_4b @ p\n",
         "# -----------------------------------------------------------\n",
         "\n",
         "ax_q4b= fig_q4b.add_subplot(projection='3d')\n",
@@ -587,24 +573,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "kIG86ozQvVb5",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 829
+          "height": 813
         },
         "id": "kIG86ozQvVb5",
-        "outputId": "330166eb-2d6f-4006-ae08-0cef8b06fbd9"
+        "outputId": "fd6071d8-2b84-4b7b-debd-dbaec2c1cf65"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "p_c is:[-0.4  1.   0.7]\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -620,7 +599,8 @@
         "fig_q4c= plt.figure(figsize=(10,10))\n",
         "\n",
         "# Write your code: Compute the vector (p_c) rotated by R_4c\n",
-        "...\n",
+        "R_4c = ZYX_to_SO3(np.pi/2, 0.0, 0.0)\n",
+        "p_c  = R_4c @ p\n",
         "# --------------------------------------------------\n",
         "ax_q4c= fig_q4c.add_subplot(projection='3d')\n",
         "ax_q4c = draw_axes(ax=ax_q4c, R=R_4c)\n",
