--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -142,7 +142,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IYZqpvkjOyOW",
-        "outputId": "84c19b6f-7346-4c66-9e06-fe5f260a803a"
+        "outputId": "bec9e2ce-c269-41a9-fc1b-025546d5e9d6"
       },
       "outputs": [
         {
@@ -243,7 +243,7 @@
           "height": 807
         },
         "id": "5IoRPa3KYoW3",
-        "outputId": "12dcddb0-4100-4556-d942-e0344837d9fe"
+        "outputId": "4c3b18bb-82a4-4bef-e6c8-f81bf7234de6"
       },
       "outputs": [
         {
@@ -280,7 +280,7 @@
           "height": 807
         },
         "id": "fHcIGAWhjL7s",
-        "outputId": "311a065b-4f8e-4ddb-8536-3bbf19eeb077"
+        "outputId": "c8c3800d-dc98-483c-8d06-66f18ae00120"
       },
       "outputs": [
         {
@@ -319,7 +319,7 @@
           "height": 807
         },
         "id": "0MkFNTqkjhN0",
-        "outputId": "80a0599f-e1d0-4919-dc01-820491ddee3a"
+        "outputId": "9f3ac4b5-3aa7-4f81-e4fc-19cff22d8a0b"
       },
       "outputs": [
         {
@@ -443,7 +443,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F4uFUlWl_2xQ",
-        "outputId": "793cad5f-3058-40a2-cd81-9299f3a3e03a"
+        "outputId": "dc7f0b56-67be-40f6-b0f9-3bd54dd9c09b"
       },
       "outputs": [
         {
@@ -500,7 +500,7 @@
           "height": 807
         },
         "id": "0Q6yfu5lnYRX",
-        "outputId": "3c745654-567c-4585-8c29-e6fa80d64715"
+        "outputId": "301a5181-2126-4fab-f351-a8f639818197"
       },
       "outputs": [
         {
@@ -541,7 +541,7 @@
           "height": 813
         },
         "id": "M6hcxpvZvVVR",
-        "outputId": "d9d71c92-9b35-4bac-945e-d2e2354103e5"
+        "outputId": "17904b18-6d81-4ba9-b80c-629fb6a7f5af"
       },
       "outputs": [
         {
@@ -581,7 +581,7 @@
           "height": 813
         },
         "id": "kIG86ozQvVb5",
-        "outputId": "0b549199-9d7f-44f8-8df2-2108e33698d4"
+        "outputId": "40bc090e-92b2-43b2-963b-eb416ea04734"
       },
       "outputs": [
         {
@@ -755,7 +755,7 @@
           "height": 1000
         },
         "id": "VkTKjV7UGzXe",
-        "outputId": "6b368192-b947-4574-a841-a41438a69a8d"
+        "outputId": "bd6f7ba5-d9a4-454e-94e8-41cc0cd0509f"
       },
       "outputs": [
         {
@@ -2894,7 +2894,7 @@
           "height": 1000
         },
         "id": "xaMmOyOpNPov",
-        "outputId": "8769c314-8313-41f3-83f6-6a8cb32bf3be"
+        "outputId": "afb59172-dd8e-40db-be40-514d92bbfd2d"
       },
       "outputs": [
         {
@@ -5005,7 +5005,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "w9nQC4gL1Jb-",
       "metadata": {
         "id": "w9nQC4gL1Jb-"
@@ -5015,14 +5015,16 @@
         "def POS_ZYX_to_SE3(x, y, z, th_z, th_y, th_x):\n",
         "  SE3  = np.eye(4)\n",
         "  # Write your code\n",
-        "  ...\n",
+        "  R = ZYX_to_SO3(th_z, th_y, th_x)\n",
+        "  SE3[0:3, 0:3] = R\n",
+        "  SE3[0:3, 3] = np.array([x, y, z])\n",
         "  # ------------------------------------------------\n",
         "  return SE3"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "Qrqhwj9eEuwu",
       "metadata": {
         "id": "Qrqhwj9eEuwu"
@@ -5057,14 +5059,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "TR83ZVSrFQfY",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TR83ZVSrFQfY",
-        "outputId": "95c0f219-dbc5-4a0e-e771-f7800bb2ed9a"
+        "outputId": "ade21eef-f7c7-412d-d18c-87d6f9c34e50"
       },
       "outputs": [
         {
@@ -5096,7 +5098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "uVLXqeKoLFkU",
       "metadata": {
         "id": "uVLXqeKoLFkU"
@@ -5121,7 +5123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "tyoRgYm3Lkzn",
       "metadata": {
         "colab": {
@@ -5129,7 +5131,7 @@
           "height": 807
         },
         "id": "tyoRgYm3Lkzn",
-        "outputId": "f77a083b-3743-4a6c-843a-360ea2c8236f"
+        "outputId": "5469b40d-ddd8-4dee-c268-1bfed98712fa"
       },
       "outputs": [
         {
@@ -5147,7 +5149,12 @@
         "T0 = POS_ZYX_to_SE3(0.0, 0.0, 0.0, 0., 0.0, 0.0)\n",
         "\n",
         "# Write your code: Complete all SE(3)\n",
-        "...\n",
+        "T0_1 = POS_ZYX_to_SE3(0.4, 0.0, 0.4, 0.0, 0.0, 0.0)\n",
+        "T1_2 = POS_ZYX_to_SE3(0.7, 0.0, 0.8, 0.0, 0.0, 0.0)\n",
+        "T2_3 = POS_ZYX_to_SE3(1.0, 0.0, 0.4, 0.0, 0.0, 0.0)\n",
+        "\n",
+        "T0_2 = T0_1 @ T1_2\n",
+        "T0_3 = T0_2 @ T2_3\n",
         "# ------------------------------------------------------\n",
         "fig_T1= plt.figure(figsize=(10,10))\n",
         "ax = fig_T1.add_subplot(projection='3d')\n",
@@ -5177,7 +5184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "kobRged6Wu4F",
       "metadata": {
         "id": "kobRged6Wu4F"
@@ -5190,12 +5197,29 @@
         "T_hist = np.zeros((N, 4, 4, 4))\n",
         "\n",
         "# complete the code that saves history of the four frame change (T_hist)\n",
-        "..."
+        "for k, tk in enumerate(t):\n",
+        "    th1 = np.sin(omega * tk)\n",
+        "    th2 = np.sin(omega * tk + 0.3)\n",
+        "    th3 = 0.0\n",
+        "\n",
+        "    # base frame {0}\n",
+        "    T0   = POS_ZYX_to_SE3(0.0, 0.0, 0.0, 0.0, 0.0, 0.0)\n",
+        "    T0_1 = POS_ZYX_to_SE3(0.4, 0.0, 0.4, 0.0, th1, 0.0)\n",
+        "    T1_2 = POS_ZYX_to_SE3(0.7, 0.0, 0.8, 0.0, th2, 0.0)\n",
+        "    T2_3 = POS_ZYX_to_SE3(1.0, 0.0, 0.4, 0.0, th3, 0.0)\n",
+        "\n",
+        "    T0_2 = T0_1 @ T1_2\n",
+        "    T0_3 = T0_2 @ T2_3\n",
+        "\n",
+        "    T_hist[k,0] = T0\n",
+        "    T_hist[k,1] = T0_1\n",
+        "    T_hist[k,2] = T0_2\n",
+        "    T_hist[k,3] = T0_3"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "SBW-SQsIXpWN",
       "metadata": {
         "id": "SBW-SQsIXpWN"
@@ -5256,7 +5280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "Kioq6PoVbd0u",
       "metadata": {
         "colab": {
@@ -5264,7 +5288,7 @@
           "height": 1000
         },
         "id": "Kioq6PoVbd0u",
-        "outputId": "d2aa0659-b059-481a-8b3a-2e19e27dfc67"
+        "outputId": "45a6983e-8a8f-47da-abca-7fbcc59d40dd"
       },
       "outputs": [
         {
@@ -10027,7 +10051,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
